--- a/index.html
+++ b/index.html
@@ -373,6 +373,7 @@
 
     <section class="product">
       <ul class="product_type">
+        <li data-item="all" class="active product_item">SEMUA</li>
         <li data-item="pria" class="product_item">PRIA</li>
         <li data-item="wanita" class="product_item">WANITA</li>
         <li data-item="anak" class="product_item">ANAK</li>
