--- a/index.html
+++ b/index.html
@@ -189,35 +189,42 @@
 
     <!-- Header -->
     <header class="header">
-      <div class="image_1 bg-[url('./../assets/img/header/summer-img.jpg')]">
-        <div class="text_header">
-          <p class="title_header">
-            Color of <br />
-            Summer <br />
-            Outfit
-          </p>
-          <p class="desc_header">
-            100+ Collections for your outfit <br />
-            inspirations in this summer
-          </p>
-          <a href="#" class="btn_header">view collections</a>
+      <div class="bungkus_img">
+        <div class="p-5 md:col-span-2">
+          <div
+            class="image_1 bg-[url('./../assets/img/header/summer-img.jpg')]"
+          >
+            <div class="text_header">
+              <p class="title_header">
+                Color of <br />
+                Summer <br />
+                Outfit
+              </p>
+              <p class="desc_header">
+                100+ Collections for your outfit <br />
+                inspirations in this summer
+              </p>
+              <a href="#" class="btn_header">view collections</a>
+            </div>
+          </div>
         </div>
-      </div>
-
-      <div class="image_container">
-        <div
-          class="image_2 bg-[url('./../assets/img/header/image-outdoor.png')]"
-        >
-          <p class="title_bg">
-            Outdoor <br />
-            Active
-          </p>
-        </div>
-        <div class="image_2 bg-[url('./../assets/img/header/image-sepatu.png')]">
-          <p class="title_bg">
-            Casual <br />
-            Comfort
-          </p>
+        <div class="image_container">
+          <div
+            class="image_2 bg-[url('./../assets/img/header/image-outdoor.png')]"
+          >
+            <p class="title_bg">
+              Outdoor <br />
+              Active
+            </p>
+          </div>
+          <div
+            class="image_2 bg-[url('./../assets/img/header/image-sepatu.png')]"
+          >
+            <p class="title_bg">
+              Casual <br />
+              Comfort
+            </p>
+          </div>
         </div>
       </div>
     </header>
