--- a/index.html
+++ b/index.html
@@ -227,6 +227,42 @@
           </div>
         </div>
       </div>
+      <!-- header 2 -->
+      <div class="header_2">
+        <div class="text">
+          <p
+            class="title_header2 text-gray-900 font-semibold md:text-[65px] md:leading-[65px] md:-tracking-[4px]"
+          >
+            Casual <br />
+            Inspirations
+          </p>
+          <p class="text-[18px]">
+            Our favorite combinations for casual outfit that can inspire you to
+            apply on your daily activity.
+          </p>
+          <a href="#" class="btn_browse">BROWSE INSPIRATIONS</a>
+        </div>
+        <div class="bungkus_bg_img flex gap-3 w-full col-span-2">
+          <div
+            class="img_header2 bg-[url('./../assets/img/header/bg-header2-1.jpg')]"
+          >
+            <p class="title_bg_header">
+              Say it <br />
+              with Shirt
+            </p>
+            <i class="ph ph-arrow-up-right"></i>
+          </div>
+          <div
+            class="img_header2 bg-[url('./../assets/img/header/bg-header2-2.jpg')]"
+          >
+            <p class="title_bg_header">
+              Draw his <br />
+              Smile
+            </p>
+            <i class="ph ph-arrow-up-right"></i>
+          </div>
+        </div>
+      </div>
     </header>
 
     <!-- Value -->
