--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
                 </li>
                 <li>
                   <a
-                    href="#"
-                    class="group relative before:absolute before:inset-x-0 before:bottom-0 before:h-2 before:origin-right before:scale-x-0 before:bg-cyan-100 before:transition before:duration-200 hover:before:origin-left hover:before:scale-x-100"
+                    href="katalog.html"
+                    class="group relative before:absolute before:inset-x-0 before:bottom-0 before:h-[2px] before:origin-right before:scale-x-0 before:bg-slate-900 before:transition before:duration-200 hover:before:origin-left hover:before:scale-x-100"
                   >
                     <span class="relative group-hover:text-cyan-800"
-                      >Services</span
+                      >Katalog</span
                     >
                   </a>
                 </li>
